<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:textSize="19sp"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/setting"
            android:id="@+id/btn_setting"
            android:layout_width="50dp"
            android:layout_height="match_parent" />
        <EditText
            android:layout_weight="1"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionSearch"
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <Button
            android:textSize="19sp"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/search"
            android:id="@+id/btn_search"
            android:layout_width="50dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/Animation"
            android:id="@+id/btn_animation"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/Comic"
            android:id="@+id/btn_comic"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/Novel"
            android:id="@+id/btn_novel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.drafens.dranacger.Tools.DynamicLine
        android:id="@+id/cursor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>