<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.EpisodeResult">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_alignParentStart="true"
            android:layout_width="85dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_marginTop="7dp"
            android:textSize="20sp"
            android:id="@+id/tv_name"
            android:layout_toEndOf="@id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_toEndOf="@id/iv_icon"
            android:layout_marginTop="80dp"
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_toEndOf="@id/iv_icon"
            android:layout_marginTop="60dp"
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="25dp"
            android:layout_alignParentEnd="true"
            android:id="@+id/tv_update_chapter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_alignParentEnd="true"
            android:layout_marginTop="45dp"
            android:id="@+id/tv_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/bt_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/order_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/switch_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/order_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <CheckBox
            android:text="@string/favourite"
            android:layout_alignParentEnd="true"
            android:id="@+id/check_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_episode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>